--- a/.woodpecker/build_push.yml
+++ b/.woodpecker/build_push.yml
@@ -4,7 +4,7 @@ when:
 
 steps:
   build:
-    image: rust/latest
+    image: rust:latest
     commands:
       - sudo apt-get update
       - sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libayatana-appindicator3-dev librsvg2-dev rustup build-essential curl wget file libssl-dev
