--- a/.woodpecker/build_push.yml
+++ b/.woodpecker/build_push.yml
@@ -6,8 +6,8 @@ steps:
   build:
     image: debian:latest
     commands:
-      - sudo apt-get update
-      - sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libayatana-appindicator3-dev librsvg2-dev rustup build-essential curl wget file libssl-dev
+      - apt-get update
+      - apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libayatana-appindicator3-dev librsvg2-dev rustup build-essential curl wget file libssl-dev
       - rustup toolchain install nightly
       - rustup target add wasm32-unknown-unknown
       - cargo install trunk tauri-cli
