Testing woodpecker CI/CD V10

--- a/.woodpecker/build_push.yml
+++ b/.woodpecker/build_push.yml
@@ -12,7 +12,7 @@ steps:
       - rustup toolchain install nightly
       - rustup target add wasm32-unknown-unknown x86_64-pc-windows-msvc
       - cargo install trunk tauri-cli xwin
-      - xwin splat --output ~/.xwin
+      - yes | xwin splat --output ~/.xwin
       - cargo tauri build
       - ls target/release/bundle/deb
       - ls target/release/bundle/appimage
