--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -4,7 +4,7 @@ rustc-wrapper = "/usr/bin/sccache"
 [target.x86_64-pc-windows-msvc]
 linker = "lld"
 rustflags = [
-  "-Lnative=~/.xwin/crt/lib/x86_64",
-  "-Lnative=~/.xwin/sdk/lib/um/x86_64",
-  "-Lnative=~/.xwin/sdk/lib/ucrt/x86_64"
+  "-Lnative=.xwin/crt/lib/x86_64",
+  "-Lnative=.xwin/sdk/lib/um/x86_64",
+  "-Lnative=.xwin/sdk/lib/ucrt/x86_64"
 ]
