--- a/.woodpecker/build_push.yml
+++ b/.woodpecker/build_push.yml
@@ -1,6 +1,6 @@
 when:
-  event: push
-  branch: main
+  event: tag
+  ref: refs/tags/v*
 
 steps:
   build:
@@ -14,10 +14,10 @@ steps:
       - cargo install trunk tauri-cli xwin
       - echo "yes" | xwin splat --output .xwin
       - cargo tauri build
-      - mv target/release/bundle/deb/fabseapp_0.0.0_amd64.deb fabseapp_0.0.0_amd64.deb
-      - mv target/release/bundle/appimage/fabseapp_0.0.0_amd64.AppImage fabseapp_0.0.0_amd64.AppImage
+      - mv target/release/bundle/deb/fabseapp_0.0.0_amd64.deb fabseapp_${CI_COMMIT_TAG}_amd64.deb
+      - mv target/release/bundle/appimage/fabseapp_0.0.0_amd64.AppImage fabseapp_${CI_COMMIT_TAG}_amd64.AppImage
       - cargo tauri build --target x86_64-pc-windows-msvc
-      - ls target/x86_64-pc-windows-msvc/release/bundle/nsis
+      - mv target/x86_64-pc-windows-msvc/release/bundle/nsis/fabseapp_0.0.0_x64-setup.exe fabseapp_${CI_COMMIT_TAG}_x64-setup.exe
 
   release:
     image: woodpeckerci/plugin-gitea-release
@@ -25,8 +25,9 @@ steps:
       base_url: https://codeberg.org
       file_exists: overwrite
       files:
-        - "fabseapp_0.0.0_amd64.deb"
-        - "fabseapp_0.0.0_amd64.AppImage"
+        - "fabseapp_${CI_COMMIT_TAG}_amd64.deb"
+        - "fabseapp_${CI_COMMIT_TAG}_amd64.AppImage"
+        - "fabseapp_${CI_COMMIT_TAG}_x64-setup.exe"
       checksum: sha256
       api_key:
         from_secret: FABSEGIT_RELEASE
