--- a/.woodpecker/build_push.yml
+++ b/.woodpecker/build_push.yml
@@ -6,6 +6,7 @@ steps:
   build:
     image: rust:latest
     commands:
+      - cat /etc/apt/sources.list
       - apt-get update
       - apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libayatana-appindicator3-dev librsvg2-dev build-essential curl wget file libssl-dev nsis llvm lld sccache
       - curl --proto '=https' --tlsv1.2 https://sh.rustup.rs -sSf | sh -s -- -y
