--- a/.woodpecker/build_push.yml
+++ b/.woodpecker/build_push.yml
@@ -4,7 +4,7 @@ when:
 
 steps:
   build:
-    image: debian:sid
+    image: debian:sid-slim
     commands:
       - apt-get update
       - apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libayatana-appindicator3-dev librsvg2-dev build-essential curl wget file libssl-dev nsis llvm lld sccache rustup
