--- a/.woodpecker/build_push.yml
+++ b/.woodpecker/build_push.yml
@@ -6,10 +6,8 @@ steps:
   build:
     image: debian:sid-slim
     commands:
-#      - apt-get update
-#      - apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libayatana-appindicator3-dev librsvg2-dev build-essential curl wget file libssl-dev nsis llvm lld sccache
       - apt-get update
-      - apt-get install -y curl
+      - apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libayatana-appindicator3-dev librsvg2-dev build-essential curl wget file libssl-dev nsis llvm lld sccache
       - curl --proto '=https' --tlsv1.2 https://sh.rustup.rs -sSf | sh -s -- -y
       - export PATH="$HOME/.cargo/bin:$PATH"
       - rustup toolchain install nightly
