--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,6 @@
-[build]
-rustc-wrapper = "/usr/bin/sccache"
+[target.x86_64-unknown-linux-gnu]
+linker = "clang"
+rustflags = ["-Ctarget-cpu=native", "-Clink-arg=--ld-path=wild"]
 
 [target.x86_64-pc-windows-msvc]
 linker = "lld"
@@ -8,3 +9,12 @@ rustflags = [
   "-Lnative=.xwin/sdk/lib/um/x86_64",
   "-Lnative=.xwin/sdk/lib/ucrt/x86_64"
 ]
+
+[build]
+rustc-wrapper = "sccache"
+rustflags = ["-Z", "threads=8"]
+
+[unstable]
+gc = true
+build-std = ["std", "panic_abort", "core"]
+build-std-features = ["panic_immediate_abort"]
